objects/BillingCase__c.object
<CustomObject>
    <fields>
        <fullName>Efforts__c</fullName>
        <label>Efforts</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Billing</fullName>
                    <default>true</default>
                    <label>Billing</label>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Billing + Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_del__c</fullName>
        <label>Expected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expiration_Date_Future_CC__c</fullName>
        <label>Expiration Date - Future CC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FUTURE_CC_AUTHORIZATION__c</fullName>
        <label>Future CC Authorization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Finance_Associate__c</fullName>
        <label>Finance Associate</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Invoice_Sent_By__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Ajay Singh</fullName>
                </value>
                <value>
                    <fullName>Anuj Gupta</fullName>
                </value>
                <value>
                    <fullName>Ashley Chiu</fullName>
                </value>
                <value>
                    <fullName>Dinesh Jakhar</fullName>
                </value>
                <value>
                    <fullName>Nicholas Kaliya</fullName>
                </value>
                <value>
                    <fullName>Rohit Khanna</fullName>
                </value>
                <value>
                    <fullName>Usha Senapati</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Future_Billing__c</fullName>
        <label>Future Billing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gut_Check__c</fullName>
        <label>Gut Check</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inquired__c</fullName>
        <label>Inquired</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_1_Amount__c</fullName>
        <label>Invoice # 1 Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_1_Date__c</fullName>
        <label>Invoice # 1 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_1__c</fullName>
        <label>Invoice # 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_2_Amount__c</fullName>
        <label>Invoice # 2 Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_2_Date__c</fullName>
        <label>Invoice # 2 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_2__c</fullName>
        <label>Invoice # 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_3_Amount__c</fullName>
        <label>Invoice # 3 Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_3_Date__c</fullName>
        <label>Invoice # 3 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_3__c</fullName>
        <label>Invoice # 3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount__c</fullName>
        <label>Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Currency__c</fullName>
        <description>Invoice Currency</description>
        <label>Invoice Currency</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Sent_By__c</fullName>
        <label>Invoice Sent By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ajay Singh</fullName>
                </value>
                <value>
                    <fullName>Anuj Gupta</fullName>
                </value>
                <value>
                    <fullName>Anuj Malhotra</fullName>
                </value>
                <value>
                    <fullName>Ashley Chiu</fullName>
                </value>
                <value>
                    <fullName>Ashok Burnwal</fullName>
                </value>
                <value>
                    <fullName>Dinesh Jakhar</fullName>
                </value>
                <value>
                    <fullName>Narendra Kaliya</fullName>
                </value>
                <value>
                    <fullName>Parul Sehgal</fullName>
                </value>
                <value>
                    <fullName>Prateek Chopra</fullName>
                </value>
                <value>
                    <fullName>Seema Girsha</fullName>
                </value>
                <value>
                    <fullName>Sumit Sabharwal</fullName>
                </value>
                <value>
                    <fullName>Tanuj Shrivastava</fullName>
                </value>
                <value>
                    <fullName>Taruna Wadhawa</fullName>
                </value>
                <value>
                    <fullName>Tiju Pappachan</fullName>
                </value>
                <value>
                    <fullName>Usha Senapati</fullName>
                    <default>true</default>
                    <label>Usha Senapati</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Title_From__c</fullName>
        <description>Invoice Title ~ From</description>
        <label>Invoice Title - From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Title_To__c</fullName>
        <label>Invoice Title - To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Type_1__c</fullName>
        <label>Invoice Type # 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>License</fullName>
                </value>
                <value>
                    <fullName>Misc.</fullName>
                </value>
                <value>
                    <fullName>Overage</fullName>
                </value>
                <value>
                    <fullName>Transaction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Type_2__c</fullName>
        <label>Invoice Type # 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>License</fullName>
                </value>
                <value>
                    <fullName>Misc.</fullName>
                </value>
                <value>
                    <fullName>Transaction</fullName>
                </value>
                <value>
                    <fullName>Overage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Type_3__c</fullName>
        <label>Invoice Type # 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>License</fullName>
                </value>
                <value>
                    <fullName>Misc.</fullName>
                </value>
                <value>
                    <fullName>Transaction</fullName>
                </value>
                <value>
                    <fullName>Overage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice#</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>JSD_Coface_Update__c</fullName>
        <label>JSD Coface Update</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Negotiation</fullName>
                </value>
                <value>
                    <fullName>Follow Up</fullName>
                </value>
                <value>
                    <fullName>Dropped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JSD_Coface__c</fullName>
        <label>JSD/Coface</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Added to List</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Event_Date__c</fullName>
        <label>Last Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Login_Date__c</fullName>
        <label>Last Login Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loss_Risk__c</fullName>
        <label>Loss/Risk</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MYD_AR__c</fullName>
        <label>MYD - AR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MYD_Parent_Contract__c</fullName>
        <label>MYD - Parent Contract</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mailing_Address__c</fullName>
        <label>Mailing Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mike_Ross_Response_Received__c</fullName>
        <label>Mike Ross Response Received</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mike_Ross__c</fullName>
        <label>Mike Ross</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Name_of_Cardholder_CC_on_File__c</fullName>
        <label>Name of Cardholder - CC on File</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Cardholder_Future_CC__c</fullName>
        <label>Name of Cardholder - Future CC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Event_Date__c</fullName>
        <label>Next Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes_for_Ag_del__c</fullName>
        <label>Notes for Aging Project</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Occurance_of_CC_Charge__c</fullName>
        <label>Occurance of CC Charge</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opt_Out_Clause__c</fullName>
        <label>Opt-Out Clause</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opt_Out_Date__c</fullName>
        <label>Opt-Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Important_Points__c</fullName>
        <label>Other Important Points</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Info__c</fullName>
        <label>Other Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Out_Year_Value__c</fullName>
        <label>Out-Year Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parent_Contract_Value__c</fullName>
        <label>Parent Contract Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Date_del__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Plan_0_30__c</fullName>
        <label>Payment Plan 0-30</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Plan_31_60__c</fullName>
        <label>Payment Plan 31-60</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Plan_61_90__c</fullName>
        <label>Payment Plan 61-90</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Plan_91__c</fullName>
        <label>Payment Plan 91+</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Plan_Value__c</fullName>
        <label>Payment Plan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Plan__c</fullName>
        <label>Payment Plan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Monthy</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Bi-Annual</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Received_1__c</fullName>
        <label>Payment Received 1</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Received_2__c</fullName>
        <label>Payment Received 2</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Received_3__c</fullName>
        <label>Payment Received 3</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Received_del__c</fullName>
        <label>Payment Received</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Work#</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Email__c</fullName>
        <label>Primary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Probability_Of_Winning__c</fullName>
        <label>Probability Of Winning</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Bucket_del__c</fullName>
        <description>Project Bucket -- &lt;&lt;0-30 or 30-60 or 60-90 or 91+&gt;&gt;</description>
        <label>Project Bucket</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-30</fullName>
                </value>
                <value>
                    <fullName>30-60</fullName>
                </value>
                <value>
                    <fullName>60-90</fullName>
                </value>
                <value>
                    <fullName>91+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provisional_Invoice__c</fullName>
        <label>Provisional Invoice</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_1__c</fullName>
        <label>Reason 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_2__c</fullName>
        <label>Reason 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_3__c</fullName>
        <label>Reason 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Result__c</fullName>
        <label>Reason/Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_if_not_sent__c</fullName>
        <label>Reason, if not sent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <label>Requested By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aaron Carlo</fullName>
                </value>
                <value>
                    <fullName>Adrian Arora</fullName>
                </value>
                <value>
                    <fullName>Afeef Khalil</fullName>
                </value>
                <value>
                    <fullName>Ajay Singh</fullName>
                </value>
                <value>
                    <fullName>Alex Rolfe</fullName>
                </value>
                <value>
                    <fullName>Alice Dixon</fullName>
                </value>
                <value>
                    <fullName>Allison Smith</fullName>
                </value>
                <value>
                    <fullName>Anil Punyapu</fullName>
                </value>
                <value>
                    <fullName>Anuj Gupta</fullName>
                </value>
                <value>
                    <fullName>Anuj Malhotra</fullName>
                </value>
                <value>
                    <fullName>Ashish Arora</fullName>
                </value>
                <value>
                    <fullName>Ashley Baber</fullName>
                </value>
                <value>
                    <fullName>Ashley Chiu</fullName>
                </value>
                <value>
                    <fullName>Ashley Mohney</fullName>
                </value>
                <value>
                    <fullName>Bart Hart</fullName>
                </value>
                <value>
                    <fullName>Betsie Vason</fullName>
                </value>
                <value>
                    <fullName>Bob Shekhar</fullName>
                </value>
                <value>
                    <fullName>Brian Pirkle</fullName>
                </value>
                <value>
                    <fullName>Brittany Spano</fullName>
                </value>
                <value>
                    <fullName>Caitlin McMorrow</fullName>
                </value>
                <value>
                    <fullName>Caitlin Rawles</fullName>
                </value>
                <value>
                    <fullName>Camille Wingo</fullName>
                </value>
                <value>
                    <fullName>Carla Perez</fullName>
                </value>
                <value>
                    <fullName>Caroline Gordon</fullName>
                </value>
                <value>
                    <fullName>Cassie Whiteside</fullName>
                </value>
                <value>
                    <fullName>Cesar Devoto</fullName>
                </value>
                <value>
                    <fullName>Chris Pennington</fullName>
                </value>
                <value>
                    <fullName>Christopher Coultas</fullName>
                </value>
                <value>
                    <fullName>Christopher Rost</fullName>
                </value>
                <value>
                    <fullName>Cristina Estrella</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolved_del__c</fullName>
        <formula>Payment_Received_del__c + Write_off_done_Value_del__c+ ST_W_OFF_Done__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resolved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Response_Date__c</fullName>
        <label>Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Response_Received__c</fullName>
        <label>Response Received</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>Not Received</fullName>
                </value>
                <value>
                    <fullName>Question Received</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Dropped</fullName>
                </value>
                <value>
                    <fullName>Ongoing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risk_Amount__c</fullName>
        <label>Risk Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Running_Website__c</fullName>
        <label>Running Website</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ST_W_OFF_Done__c</fullName>
        <label>ST W/OFF Done</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ST_W_OFF_To_Be_Done__c</fullName>
        <label>ST W/OFF To Be Done</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Name__c</fullName>
        <label>Sales Rep Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Authorized_By__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Aaron Carlo</fullName>
                </value>
                <value>
                    <fullName>Bob Shekhar</fullName>
                </value>
                <value>
                    <fullName>Jack Ukil</fullName>
                </value>
                <value>
                    <fullName>Peter Kaandorp</fullName>
                </value>
                <value>
                    <fullName>Mike Julka</fullName>
                </value>
                <value>
                    <fullName>Adrian Arora</fullName>
                </value>
                <value>
                    <fullName>Graham Beale</fullName>
                </value>
                <value>
                    <fullName>Allison Smith</fullName>
                </value>
                <value>
                    <fullName>Kevin Caiazza</fullName>
                </value>
                <value>
                    <fullName>Kim Murdock</fullName>
                </value>
                <value>
                    <fullName>Jonathan Rouhafzai</fullName>
                </value>
                <value>
                    <fullName>Lizz Harrell</fullName>
                </value>
                <value>
                    <fullName>Gurpreet Singh</fullName>
                </value>
                <value>
                    <fullName>Daniel Stone</fullName>
                </value>
                <value>
                    <fullName>Chris Pennington</fullName>
                </value>
                <value>
                    <fullName>Jenna Glotz</fullName>
                </value>
                <value>
                    <fullName>Emma Batson</fullName>
                </value>
                <value>
                    <fullName>Katie LaDue</fullName>
                </value>
                <value>
                    <fullName>Caroline Gordon</fullName>
                </value>
                <value>
                    <fullName>Janine Alsalam</fullName>
                </value>
                <value>
                    <fullName>Mollie Propes</fullName>
                </value>
                <value>
                    <fullName>Afeef Khalil</fullName>
                </value>
                <value>
                    <fullName>Meg Stensrud</fullName>
                </value>
                <value>
                    <fullName>Cesar Devoto</fullName>
                </value>
                <value>
                    <fullName>Brian Pirkle</fullName>
                </value>
                <value>
                    <fullName>Ryan McGlynn</fullName>
                </value>
                <value>
                    <fullName>Cassie Whiteside</fullName>
                </value>
                <value>
                    <fullName>Rachel Ruddock</fullName>
                </value>
                <value>
                    <fullName>Alex Rolfe</fullName>
                </value>
                <value>
                    <fullName>Garrett Bredenkamp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <label>Sales Rep</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Reps__c</fullName>
        <label>Sales Rep</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Requested_By__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Aaron Carlo</fullName>
                </value>
                <value>
                    <fullName>Bob Shekhar</fullName>
                </value>
                <value>
                    <fullName>Jack Ukil</fullName>
                </value>
                <value>
                    <fullName>Peter Kaandorp</fullName>
                </value>
                <value>
                    <fullName>Mike Julka</fullName>
                </value>
                <value>
                    <fullName>Adrian Arora</fullName>
                </value>
                <value>
                    <fullName>Graham Beale</fullName>
                </value>
                <value>
                    <fullName>Allison Smith</fullName>
                </value>
                <value>
                    <fullName>Kevin Caiazza</fullName>
                </value>
                <value>
                    <fullName>Kim Murdock</fullName>
                </value>
                <value>
                    <fullName>Jonathan Rouhafzai</fullName>
                </value>
                <value>
                    <fullName>Lizz Harrell</fullName>
                </value>
                <value>
                    <fullName>Gurpreet Singh</fullName>
                </value>
                <value>
                    <fullName>Daniel Stone</fullName>
                </value>
                <value>
                    <fullName>Chris Pennington</fullName>
                </value>
                <value>
                    <fullName>Jenna Glotz</fullName>
                </value>
                <value>
                    <fullName>Emma Batson</fullName>
                </value>
                <value>
                    <fullName>Katie LaDue</fullName>
                </value>
                <value>
                    <fullName>Caroline Gordon</fullName>
                </value>
                <value>
                    <fullName>Janine Alsalam</fullName>
                </value>
                <value>
                    <fullName>Mollie Propes</fullName>
                </value>
                <value>
                    <fullName>Afeef Khalil</fullName>
                </value>
                <value>
                    <fullName>Meg Stensrud</fullName>
                </value>
                <value>
                    <fullName>Cesar Devoto</fullName>
                </value>
                <value>
                    <fullName>Brian Pirkle</fullName>
                </value>
                <value>
                    <fullName>Ryan McGlynn</fullName>
                </value>
                <value>
                    <fullName>Cassie Whiteside</fullName>
                </value>
                <value>
                    <fullName>Rachel Ruddock</fullName>
                </value>
                <value>
                    <fullName>Alex Rolfe</fullName>
                </value>
                <value>
                    <fullName>Garrett Bredenkamp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>